# crms

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  mypy.ini  pyproject.toml
crms/: app.py  config.py  forms.py  login_manager.py  models.py  views.py
crms/static/: main.js  manifest.json
crms/templates/: day.j2  day_form.j2  form_helpers.j2  layout.j2  login.j2  overview.j2  register.j2  view.j2
migrations/versions/: 00c7a1faf961_.py  0d15f9e1b910_.py  82ba29b26759_.py  d7fc55edd316_.py
scripts/: add_user.py
