[tool.poetry]
name = "crms"
version = "0.1.0"
description = ""
authors = ["Michal Korbela <michal.korbela@kiwi.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.2.3"
flask-sqlalchemy = "3.0.3"
kiwi-structlog-config = "0.1.8"
envparse = "0.2.0"
pymysql = "1.0.2"
gunicorn = "20.1.0"
flask-login = "0.6.2"
flask-migrate = "4.0.4"
flask-wtf = "1.1.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.0"

[tool.pylint]
    [tool.pylint.master]
    jobs=0

    [tool.pylint.'MESSAGES CONTROL']
    disable = ['duplicate-code,missing-docstring,line-too-long,no-member,wrong-import-position,locally-disabled,abstract-method,fixme,too-few-public-methods,ungrouped-imports,invalid-name,too-many-arguments,too-many-locals,too-many-instance-attributes,too-many-branches,too-many-public-methods,no-name-in-module']

    [tool.pylint.'REPORTS']
    output-format=['colorized']


    [tool.pylint.'LOGGING']
    logging-modules=['logging,structlog']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
